--- a/docker-images/apache-php-image/Dockerfile
+++ b/docker-images/apache-php-image/Dockerfile
@@ -1,3 +1,6 @@
 FROM php:5.6-apache
 
+MAINTAINER sebastien richoz <sebastien.richoz1@heig-vd.ch>
+
+# Copy content folder into specific path in apache
 COPY content/ /var/www/html/
