--- a/docker-images/apache-reverse-proxy/Dockerfile
+++ b/docker-images/apache-reverse-proxy/Dockerfile
@@ -1,8 +1,11 @@
 FROM php:5.6-apache
 
-RUN apt-get update && \apt-get install -y vim
+RUN apt-get update && \
+	apt-get install -y vim
 
+COPY apache2-foreground /usr/local/bin/
+COPY templates /var/apache2/templates
 COPY conf/ /etc/apache2
 
 RUN a2enmod proxy proxy_http
-RUN a2ensite 000-* 001-*
+RUN a2ensite 000-* 001-* 
